--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "date": "Sun Sep 01 02:03:12 CEST 2019",
+    "date": "Fri Jan 17 18:05:43 CET 2020",
     "name": "DemoVueJS",
     "format": "xml",
-    "description": "`DemoVueJS`module: **Vue.js** framework frontend demo.\n\nNote that this modules is based on the `Demo` module.\n\nSettings from [GitHub](https://github.com/simplicitesoftware/module-demo-vuejs):\n\n```json\n{\n\t\"type\": \"git\",\n\t\"origin\": { \"uri\": \"https://github.com/simplicitesoftware/module-demo-vuejs.git\" }\n}\n```",
+    "description": "### Introduction\n\nThis module contains a simple web frontend example for the demo **order management** application\nbased on **Vue.js** framework.\n\n### Prerequisites\n\nThe `Demo` module **must** be installed and configured before importing this addon module.\n\n### Import\n\nTo import this module:\n\n- Create a module named `DemoVueJS`\n- Set the settings as:\n\n```json\n{\n\t\"type\": \"git\",\n\t\"origin\": {\n\t\t\"uri\": \"https://github.com/simplicitesoftware/module-demo-vuejs.git\"\n\t}\n}\n```\n\n- Click on the _Import module_ button\n",
     "files": ["DemoVueJS.xml"],
-    "repository": {},
-    "version": "0.1",
+    "repository": {"origin": {"uri": "https://github.com/simplicitesoftware/module-demo-vuejs.git"}},
+    "version": "4.0",
     "dependencies": [{"Simplicite": "4.0"}]
 }
