--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "date": "Fri Feb 28 22:03:24 CET 2020",
     "name": "DemoVueJS",
     "format": "xml",
-    "description": "[![Quality Gate Status](https://sonarcloud.io/api/project_badges/measure?project=com.simplicite.modules%3ADemoVueJS&metric=alert_status)](https://sonarcloud.io/dashboard?id=com.simplicite.modules%3ADemoVueJS)\n\n### Introduction\n\nThis module contains a simple web frontend example for the demo **order management** application\nbased on **Vue.js** framework.\n\n### Prerequisites\n\nThe `Demo` module **must** be installed and configured before importing this addon module.\n\n### Import\n\nTo import this module:\n\n- Create a module named `DemoVueJS`\n- Set the settings as:\n\n```json\n{\n\t\"type\": \"git\",\n\t\"origin\": {\n\t\t\"uri\": \"https://github.com/simplicitesoftware/module-demo-vuejs.git\"\n\t}\n}\n```\n\n- Click on the _Import module_ button\n",
+    "description": "[![Quality Gate Status](https://sonarcloud.io/api/project_badges/measure?project=simplicite-modules-DemoProject&metric=alert_status)](https://sonarcloud.io/dashboard?id=simplicite-modules-DemoProject)\n\n### Introduction\n\nThis module contains a simple web frontend example for the demo **order management** application\nbased on **Vue.js** framework.\n\n### Prerequisites\n\nThe `Demo` module **must** be installed and configured before importing this addon module.\n\n### Import\n\nTo import this module:\n\n- Create a module named `DemoVueJS`\n- Set the settings as:\n\n```json\n{\n\t\"type\": \"git\",\n\t\"origin\": {\n\t\t\"uri\": \"https://github.com/simplicitesoftware/module-demo-vuejs.git\"\n\t}\n}\n```\n\n- Click on the _Import module_ button\n",
     "files": ["DemoVueJS.xml"],
     "repository": {"origin": {"uri": "https://github.com/simplicitesoftware/module-demo-vuejs.git"}},
     "version": "4.0",
-    "dependencies": [{"Simplicite": "4.0"}]
+    "dependencies": {"Simplicite": "4.0"}
 }
