--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "devDependencies": {
     "eslint": "latest",
+    "stylelint": "latest",
+    "@eslint/js": "latest",
     "jshint": "latest",
-    "globals": "latest"
+    "globals": "latest",
+    "stylelint-config-standard": "latest",
+    "postcss-less": "latest"
   },
   "name": "DemoVueJS",
   "scripts": {
-    "eslint": "eslint --config=.eslint-configuration --no-color resources/**/*.js",
+    "eslint": "eslint --config=.eslint-configuration --no-color --no-error-on-unmatched-pattern resources/**/*.js",
+    "stylelint": "stylelint --config=.stylelint-configuration --no-color --allow-empty-input resources/**/*.css resources/**/*.less",
     "jshint": "jshint --config=.jshint-configuration --reporter=jslint resources"
   },
   "version": "5"
